protobuf-parser/src/main/java/org/reploop/parser/protobuf/v3/Protobuf3Parser.java
// Generated from org/reploop/parser/protobuf/v3/Protobuf3.g4 by ANTLR 4.13.2
package org.reploop.parser.protobuf.v3;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class Protobuf3Parser extends Parser {
    public static final int
            SYNTAX = 1, IMPORT = 2, WEAK = 3, PUBLIC = 4, PACKAGE = 5, OPTION = 6, REPEATED = 7,
            ONEOF = 8, MAP = 9, INT32 = 10, INT64 = 11, UINT32 = 12, UINT64 = 13, SINT32 = 14, SINT64 = 15,
            FIXED32 = 16, FIXED64 = 17, SFIXED32 = 18, SFIXED64 = 19, BOOL = 20, STRING = 21,
            DOUBLE = 22, FLOAT = 23, BYTES = 24, RESERVED = 25, TO = 26, MAX = 27, ENUM = 28, MESSAGE = 29,
            SERVICE = 30, RPC = 31, STREAM = 32, RETURNS = 33, PROTO3_LIT_SINGLE = 34, PROTO3_LIT_DOBULE = 35,
            SEMI = 36, EQ = 37, LP = 38, RP = 39, LB = 40, RB = 41, LC = 42, RC = 43, LT = 44, GT = 45,
            DOT = 46, COMMA = 47, COLON = 48, PLUS = 49, MINUS = 50, STR_LIT = 51, BOOL_LIT = 52,
            FLOAT_LIT = 53, INT_LIT = 54, IDENTIFIER = 55, WS = 56, LINE_COMMENT = 57, COMMENT = 58;
    public static final int
            RULE_proto = 0, RULE_syntax = 1, RULE_importStatement = 2, RULE_packageStatement = 3,
            RULE_optionStatement = 4, RULE_optionName = 5, RULE_field = 6, RULE_fieldOptions = 7,
            RULE_fieldOption = 8, RULE_fieldNumber = 9, RULE_oneof = 10, RULE_oneofField = 11,
            RULE_mapField = 12, RULE_keyType = 13, RULE_fieldType = 14, RULE_reserved = 15,
            RULE_ranges = 16, RULE_range_ = 17, RULE_reservedFieldNames = 18, RULE_topLevelDef = 19,
            RULE_enumDef = 20, RULE_enumBody = 21, RULE_enumElement = 22, RULE_enumField = 23,
            RULE_enumValueOptions = 24, RULE_enumValueOption = 25, RULE_messageDef = 26,
            RULE_messageBody = 27, RULE_messageElement = 28, RULE_serviceDef = 29,
            RULE_serviceElement = 30, RULE_rpc = 31, RULE_constant = 32, RULE_blockLit = 33,
            RULE_emptyStatement = 34, RULE_ident = 35, RULE_fullIdent = 36, RULE_messageName = 37,
            RULE_enumName = 38, RULE_fieldName = 39, RULE_oneofName = 40, RULE_mapName = 41,
            RULE_serviceName = 42, RULE_rpcName = 43, RULE_messageType = 44, RULE_enumType = 45,
            RULE_intLit = 46, RULE_strLit = 47, RULE_boolLit = 48, RULE_floatLit = 49,
            RULE_keywords = 50;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public Protobuf3Parser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "proto", "syntax", "importStatement", "packageStatement", "optionStatement",
                "optionName", "field", "fieldOptions", "fieldOption", "fieldNumber",
                "oneof", "oneofField", "mapField", "keyType", "fieldType", "reserved",
                "ranges", "range_", "reservedFieldNames", "topLevelDef", "enumDef", "enumBody",
                "enumElement", "enumField", "enumValueOptions", "enumValueOption", "messageDef",
                "messageBody", "messageElement", "serviceDef", "serviceElement", "rpc",
                "constant", "blockLit", "emptyStatement", "ident", "fullIdent", "messageName",
                "enumName", "fieldName", "oneofName", "mapName", "serviceName", "rpcName",
                "messageType", "enumType", "intLit", "strLit", "boolLit", "floatLit",
                "keywords"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'syntax'", "'import'", "'weak'", "'public'", "'package'", "'option'",
                "'repeated'", "'oneof'", "'map'", "'int32'", "'int64'", "'uint32'", "'uint64'",
                "'sint32'", "'sint64'", "'fixed32'", "'fixed64'", "'sfixed32'", "'sfixed64'",
                "'bool'", "'string'", "'double'", "'float'", "'bytes'", "'reserved'",
                "'to'", "'max'", "'enum'", "'message'", "'service'", "'rpc'", "'stream'",
                "'returns'", "'\"proto3\"'", "''proto3''", "';'", "'='", "'('", "')'",
                "'['", "']'", "'{'", "'}'", "'<'", "'>'", "'.'", "','", "':'", "'+'",
                "'-'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "SYNTAX", "IMPORT", "WEAK", "PUBLIC", "PACKAGE", "OPTION", "REPEATED",
                "ONEOF", "MAP", "INT32", "INT64", "UINT32", "UINT64", "SINT32", "SINT64",
                "FIXED32", "FIXED64", "SFIXED32", "SFIXED64", "BOOL", "STRING", "DOUBLE",
                "FLOAT", "BYTES", "RESERVED", "TO", "MAX", "ENUM", "MESSAGE", "SERVICE",
                "RPC", "STREAM", "RETURNS", "PROTO3_LIT_SINGLE", "PROTO3_LIT_DOBULE",
                "SEMI", "EQ", "LP", "RP", "LB", "RB", "LC", "RC", "LT", "GT", "DOT",
                "COMMA", "COLON", "PLUS", "MINUS", "STR_LIT", "BOOL_LIT", "FLOAT_LIT",
                "INT_LIT", "IDENTIFIER", "WS", "LINE_COMMENT", "COMMENT"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Protobuf3.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ProtoContext proto() throws RecognitionException {
        ProtoContext _localctx = new ProtoContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_proto);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(102);
                syntax();
                setState(110);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 70598525028L) != 0)) {
                    {
                        setState(108);
                        _errHandler.sync(this);
                        switch (_input.LA(1)) {
                            case IMPORT: {
                                setState(103);
                                importStatement();
                            }
                            break;
                            case PACKAGE: {
                                setState(104);
                                packageStatement();
                            }
                            break;
                            case OPTION: {
                                setState(105);
                                optionStatement();
                            }
                            break;
                            case ENUM:
                            case MESSAGE:
                            case SERVICE: {
                                setState(106);
                                topLevelDef();
                            }
                            break;
                            case SEMI: {
                                setState(107);
                                emptyStatement();
                            }
                            break;
                            default:
                                throw new NoViableAltException(this);
                        }
                    }
                    setState(112);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SyntaxContext syntax() throws RecognitionException {
        SyntaxContext _localctx = new SyntaxContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_syntax);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(113);
                match(SYNTAX);
                setState(114);
                match(EQ);
                setState(115);
                _la = _input.LA(1);
                if (!(_la == PROTO3_LIT_SINGLE || _la == PROTO3_LIT_DOBULE)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(116);
                match(SEMI);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ImportStatementContext importStatement() throws RecognitionException {
        ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_importStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(118);
                match(IMPORT);
                setState(120);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == WEAK || _la == PUBLIC) {
                    {
                        setState(119);
                        _la = _input.LA(1);
                        if (!(_la == WEAK || _la == PUBLIC)) {
                            _errHandler.recoverInline(this);
                        } else {
                            if (_input.LA(1) == Token.EOF) matchedEOF = true;
                            _errHandler.reportMatch(this);
                            consume();
                        }
                    }
                }

                setState(122);
                strLit();
                setState(123);
                match(SEMI);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final PackageStatementContext packageStatement() throws RecognitionException {
        PackageStatementContext _localctx = new PackageStatementContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_packageStatement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(125);
                match(PACKAGE);
                setState(126);
                fullIdent();
                setState(127);
                match(SEMI);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final OptionStatementContext optionStatement() throws RecognitionException {
        OptionStatementContext _localctx = new OptionStatementContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_optionStatement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(129);
                match(OPTION);
                setState(130);
                optionName();
                setState(131);
                match(EQ);
                setState(132);
                constant();
                setState(133);
                match(SEMI);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final OptionNameContext optionName() throws RecognitionException {
        OptionNameContext _localctx = new OptionNameContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_optionName);
        int _la;
        try {
            setState(143);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case SYNTAX:
                case IMPORT:
                case WEAK:
                case PUBLIC:
                case PACKAGE:
                case OPTION:
                case REPEATED:
                case ONEOF:
                case MAP:
                case INT32:
                case INT64:
                case UINT32:
                case UINT64:
                case SINT32:
                case SINT64:
                case FIXED32:
                case FIXED64:
                case SFIXED32:
                case SFIXED64:
                case BOOL:
                case STRING:
                case DOUBLE:
                case FLOAT:
                case BYTES:
                case RESERVED:
                case TO:
                case MAX:
                case ENUM:
                case MESSAGE:
                case SERVICE:
                case RPC:
                case STREAM:
                case RETURNS:
                case BOOL_LIT:
                case IDENTIFIER:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(135);
                    fullIdent();
                }
                break;
                case LP:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(136);
                    match(LP);
                    setState(137);
                    fullIdent();
                    setState(138);
                    match(RP);
                    setState(141);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == DOT) {
                        {
                            setState(139);
                            match(DOT);
                            setState(140);
                            fullIdent();
                        }
                    }

                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FieldContext field() throws RecognitionException {
        FieldContext _localctx = new FieldContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_field);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(146);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
                    case 1: {
                        setState(145);
                        match(REPEATED);
                    }
                    break;
                }
                setState(148);
                fieldType();
                setState(149);
                fieldName();
                setState(150);
                match(EQ);
                setState(151);
                fieldNumber();
                setState(156);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LB) {
                    {
                        setState(152);
                        match(LB);
                        setState(153);
                        fieldOptions();
                        setState(154);
                        match(RB);
                    }
                }

                setState(158);
                match(SEMI);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FieldOptionsContext fieldOptions() throws RecognitionException {
        FieldOptionsContext _localctx = new FieldOptionsContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_fieldOptions);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(160);
                fieldOption();
                setState(165);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(161);
                            match(COMMA);
                            setState(162);
                            fieldOption();
                        }
                    }
                    setState(167);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FieldOptionContext fieldOption() throws RecognitionException {
        FieldOptionContext _localctx = new FieldOptionContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_fieldOption);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(168);
                optionName();
                setState(169);
                match(EQ);
                setState(170);
                constant();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FieldNumberContext fieldNumber() throws RecognitionException {
        FieldNumberContext _localctx = new FieldNumberContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_fieldNumber);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(172);
                intLit();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final OneofContext oneof() throws RecognitionException {
        OneofContext _localctx = new OneofContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_oneof);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(174);
                match(ONEOF);
                setState(175);
                oneofName();
                setState(176);
                match(LC);
                setState(182);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 40602851289858046L) != 0)) {
                    {
                        setState(180);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
                            case 1: {
                                setState(177);
                                optionStatement();
                            }
                            break;
                            case 2: {
                                setState(178);
                                oneofField();
                            }
                            break;
                            case 3: {
                                setState(179);
                                emptyStatement();
                            }
                            break;
                        }
                    }
                    setState(184);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(185);
                match(RC);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final OneofFieldContext oneofField() throws RecognitionException {
        OneofFieldContext _localctx = new OneofFieldContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_oneofField);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(187);
                fieldType();
                setState(188);
                fieldName();
                setState(189);
                match(EQ);
                setState(190);
                fieldNumber();
                setState(195);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LB) {
                    {
                        setState(191);
                        match(LB);
                        setState(192);
                        fieldOptions();
                        setState(193);
                        match(RB);
                    }
                }

                setState(197);
                match(SEMI);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final MapFieldContext mapField() throws RecognitionException {
        MapFieldContext _localctx = new MapFieldContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_mapField);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(199);
                match(MAP);
                setState(200);
                match(LT);
                setState(201);
                keyType();
                setState(202);
                match(COMMA);
                setState(203);
                fieldType();
                setState(204);
                match(GT);
                setState(205);
                mapName();
                setState(206);
                match(EQ);
                setState(207);
                fieldNumber();
                setState(212);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LB) {
                    {
                        setState(208);
                        match(LB);
                        setState(209);
                        fieldOptions();
                        setState(210);
                        match(RB);
                    }
                }

                setState(214);
                match(SEMI);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final KeyTypeContext keyType() throws RecognitionException {
        KeyTypeContext _localctx = new KeyTypeContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_keyType);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(216);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 4193280L) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FieldTypeContext fieldType() throws RecognitionException {
        FieldTypeContext _localctx = new FieldTypeContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_fieldType);
        try {
            setState(235);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 12, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(218);
                    match(DOUBLE);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(219);
                    match(FLOAT);
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(220);
                    match(INT32);
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(221);
                    match(INT64);
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(222);
                    match(UINT32);
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(223);
                    match(UINT64);
                }
                break;
                case 7:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(224);
                    match(SINT32);
                }
                break;
                case 8:
                    enterOuterAlt(_localctx, 8);
                {
                    setState(225);
                    match(SINT64);
                }
                break;
                case 9:
                    enterOuterAlt(_localctx, 9);
                {
                    setState(226);
                    match(FIXED32);
                }
                break;
                case 10:
                    enterOuterAlt(_localctx, 10);
                {
                    setState(227);
                    match(FIXED64);
                }
                break;
                case 11:
                    enterOuterAlt(_localctx, 11);
                {
                    setState(228);
                    match(SFIXED32);
                }
                break;
                case 12:
                    enterOuterAlt(_localctx, 12);
                {
                    setState(229);
                    match(SFIXED64);
                }
                break;
                case 13:
                    enterOuterAlt(_localctx, 13);
                {
                    setState(230);
                    match(BOOL);
                }
                break;
                case 14:
                    enterOuterAlt(_localctx, 14);
                {
                    setState(231);
                    match(STRING);
                }
                break;
                case 15:
                    enterOuterAlt(_localctx, 15);
                {
                    setState(232);
                    match(BYTES);
                }
                break;
                case 16:
                    enterOuterAlt(_localctx, 16);
                {
                    setState(233);
                    messageType();
                }
                break;
                case 17:
                    enterOuterAlt(_localctx, 17);
                {
                    setState(234);
                    enumType();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ReservedContext reserved() throws RecognitionException {
        ReservedContext _localctx = new ReservedContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_reserved);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(237);
                match(RESERVED);
                setState(240);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case INT_LIT: {
                        setState(238);
                        ranges();
                    }
                    break;
                    case PROTO3_LIT_SINGLE:
                    case PROTO3_LIT_DOBULE:
                    case STR_LIT: {
                        setState(239);
                        reservedFieldNames();
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                setState(242);
                match(SEMI);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
